Added keyboard input thread

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
     "stdlib.h": "c",
     "stdbool.h": "c",
     "main.h": "c",
-    "board.h": "c"
+    "board.h": "c",
+    "main_loop.h": "c",
+    "format": "c"
   }
 }
