Adding score count

--- a/tetris/Makefile
+++ b/tetris/Makefile
@@ -6,7 +6,7 @@ CFLAGS = -Wall -g
 BUILD_DIR = build
 
 # Source files
-SRC = main.c pieces.c board.c main_loop.c graphics.c
+SRC = main.c pieces.c board.c main_loop.c graphics.c score.c
 
 # Object files
 OBJ = $(SRC:%.c=$(BUILD_DIR)/%.o)
